# agentic-msteams-mcp

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-config.md  architecture.md  security.md
src/agentic_msteams_mcp/: __init__.py  config.py  main.py  mcp_server.py  teams_app.py
src/agentic_msteams_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agentic_msteams_mcp/approvals/: models.py  service.py  store.py  validation.py
src/agentic_msteams_mcp/asks/: models.py  service.py  store.py  validation.py
src/agentic_msteams_mcp/audit/: writer.py
src/agentic_msteams_mcp/notifications/: models.py  service.py
src/agentic_msteams_mcp/policy/: __init__.py  allowlist.py
src/agentic_msteams_mcp/security/: __init__.py  inbound_auth.py
src/agentic_msteams_mcp/tools/: __init__.py  health.py
tests/: test_approvals.py  test_asks_store.py  test_config.py  test_health.py  test_inbound_auth.py  test_notifications.py
